refactor: 更新类型声明路径并添加插件类型注解
将package.json中的typings字段更新为types，并指向lib/index.d.ts
在plugin.ts中为tsconfigPathsPlugin函数添加Plugin类型返回注解

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "lib/index.js",
   "module": "es/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "lib/index.d.ts",
   "files": [
     "es",
     "lib",
