docs: 添加中文文档并更新文件列表
添加 README.zh-CN.md 中文文档，并在 package.json 和 README.md 中更新相关引用

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lib",
     "LICENSE",
     "package.json",
-    "README.md"
+    "README.md",
+    "README.zh-CN.md"
   ],
   "scripts": {
     "test": "ts-node ./test/compile.ts",
